Add Datadog Test Visibility

--- a/.github/workflows/ci-dotnet.yaml
+++ b/.github/workflows/ci-dotnet.yaml
@@ -6,6 +6,12 @@ jobs:
     name: A job to say hello
     steps:
       - uses: actions/checkout@v4
+      - name: Configure Datadog Test Visibility
+        uses: nikita-tkachenko-datadog/gha-composite-test@v32
+        with:
+          languages: dotnet
+          service-name: ci-test-project-gha
+          api-key: ${{ secrets.DD_API_KEY }}
       - name: Run Tests
         run: dotnet test
         shell: bash
